# vast-db-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: run_server.py
src/vast_mcp_server/: config.py  exceptions.py  lifespan.py  server.py  utils.py
src/vast_mcp_server/resources/: metadata.py  schema.py  table_data.py
src/vast_mcp_server/tools/: query.py
src/vast_mcp_server/vast_integration/: db_ops.py
tests/: test_db_ops.py  test_resources.py  test_tools.py
